# txt_ml

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
src/: lib.rs  main.rs
src/ai/: mod.rs
src/config/: mod.rs
src/syntax/: mod.rs
src/themes/: dark.css  light.css  sepia.css
src/ui/: mod.rs
