[package]
name = "txt_ml"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A text editor with AI capabilities"

[dependencies]
# GUI
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"

# Syntax highlighting
syntect = "5.0"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# HTTP client for AI API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# File dialogs
rfd = "0.11"

# Plugin system
libloading = "0.7"

# Markdown parsing
pulldown-cmark = "0.9"

# File system operations
notify = "6.1"

# Error handling
anyhow = "1.0"

# Threading and synchronization
crossbeam = "0.8"
parking_lot = "0.12"

# Terminal UI (for TUI mode)
crossterm = "0.26"
tui = "0.19"

# Utilities
log = "0.4"
env_logger = "0.10"
